HSE_carbon_assisted/range_param_test/ads_slab/N2_rutile_110/N2_slab_VASP/sprc-calc.out
***************************************************************************
*                       SPARC (version Nov 19, 2021)                      *
*   Copyright (c) 2020 Material Physics & Mechanics Group, Georgia Tech   *
*           Distributed under GNU General Public License 3 (GPL)          *
*                   Start time: Thu Dec  2 11:13:20 2021                  *
***************************************************************************
                           Input parameters                                
***************************************************************************
CELL: 12.4338823950489 11.2657846029438 47.5378507412217 
LATVEC:
1.000000000000000 0.000000000000000 0.000000000000000 
-0.000130020950961 0.999999991547276 0.000000000000000 
0.000000000000000 -0.000000000000000 1.000000000000000 
FD_GRID: 88 79 335
FD_ORDER: 12
BC: P P D
KPOINT_GRID: 4 4 1
KPOINT_SHIFT: 0 0 0
SPIN_TYP: 0
ELEC_TEMP_TYPE: Gaussian
SMEARING: 0.007349864435
CHEB_DEGREE: 43
NSTATES: 237
EXCHANGE_CORRELATION: HSE
CALC_STRESS: 0
CALC_PRES: 0
CHEFSI_BOUND_FLAG: 0
MAXIT_SCF: 100
MINIT_SCF: 3
MAXIT_POISSON: 3000
TOL_SCF: 1.00E-06
POISSON_SOLVER: AAR
TOL_POISSON: 1.00E-08
TOL_LANCZOS: 1.00E-02
TOL_PSEUDOCHARGE: 1.00E-08
MIXING_VARIABLE: density
MIXING_PRECOND: kerker
TOL_PRECOND: 2.01E-05
PRECOND_KERKER_KTF: 1
PRECOND_KERKER_THRESH: 0.1
MIXING_PARAMETER: 0.3
MIXING_HISTORY: 7
PULAY_FREQUENCY: 1
PULAY_RESTART: 0
REFERENCE_CUTOFF: 0.5
RHO_TRIGGER: 4
FIX_RAND: 0
VERBOSITY: 1
PRINT_FORCES: 1
PRINT_ATOMS: 1
PRINT_EIGEN: 1
PRINT_DENSITY: 0
PRINT_ENERGY_DENSITY: 0
TOL_FOCK: 5.00E-05
TOL_SCF_INIT: 1.00E-04
MAXIT_FOCK: 1000
EXX_METHOD: FOURIER_SPACE
EXX_DIVERGENCE: AUXILIARY
ACE_FLAG: 1
EXX_ACE_MEM: 1
EXX_ACE_VALENCE_STATES: 10000
EXX_DOWNSAMPLING: 1 1 1
EXX_RANGE_FOCK: 0.158700
EXX_RANGE_PBE: 0.158700
OUTPUT_FILE: sprc-calc
***************************************************************************
                                Cell                                       
***************************************************************************
Lattice vectors (Bohr):
12.433882395048860 0.000000000000000 0.000000000000000 
-0.001464788027397 11.265784507717260 0.000000000000000 
0.000000000000000 -0.000000000000000 47.537850741221725 
Volume                  :  6.6589804186E+03 (Bohr^3)
***************************************************************************
                           Parallelization                                 
***************************************************************************
NP_SPIN_PARAL: 1
NP_KPOINT_PARAL: 10
NP_BAND_PARAL: 1
NP_DOMAIN_PARAL: 2 1 19
NP_DOMAIN_PHI_PARAL: 6 4 16
EIG_SERIAL_MAXNS: 1500
***************************************************************************
                             Initialization                                
***************************************************************************
Number of processors               :  384
Mesh spacing in x-direction        :  0.141294 (Bohr)
Mesh spacing in y-direction        :  0.142605 (Bohr)
Mesh spacing in z direction        :  0.141904 (Bohr)
Number of symmetry adapted k-points:  10
Output printed to                  :  sprc-calc.out
Final eigenvalues printed to       :  sprc-calc.eigen
Total number of atom types         :  3
Total number of atoms              :  49
Total number of electrons          :  388
Atom type 1  (valence electrons)   :  N 5
Pseudopotential                    :  N.psp8
Pseudocharge radii of atom type 1  :  6.50 6.56 6.53 (x, y, z dir)
Number of atoms of type 1          :  2
Atom type 2  (valence electrons)   :  O 6
Pseudopotential                    :  O.psp8
Pseudocharge radii of atom type 2  :  6.50 6.56 6.53 (x, y, z dir)
Number of atoms of type 2          :  31
Atom type 3  (valence electrons)   :  Ti 12
Pseudopotential                    :  Ti.psp8
Pseudocharge radii of atom type 3  :  6.36 6.42 6.39 (x, y, z dir)
Number of atoms of type 3          :  16
Estimated total memory usage       :  549.75 GB
Estimated memory per processor     :  1.43 GB
===================================================================
                    Self Consistent Field (SCF#1)                     
===================================================================
Iteration     Free Energy (Ha/atom)   SCF Error        Timing (sec)
1            -3.0027984093E+01        1.311E-01        341.713
2            -2.9940666707E+01        5.997E-02        84.839
3            -2.9902396900E+01        3.945E-02        84.626
4            -2.9921656066E+01        2.424E-02        84.759
5            -2.9928681262E+01        2.126E-02        84.697
6            -2.9921362215E+01        9.415E-03        84.688
7            -2.9916716779E+01        7.607E-03        84.508
8            -2.9915088495E+01        5.117E-03        84.596
9            -2.9914462956E+01        2.757E-03        84.872
10           -2.9913835352E+01        1.977E-03        84.677
11           -2.9912900238E+01        1.574E-03        84.852
12           -2.9912591858E+01        9.948E-04        84.444
13           -2.9912434599E+01        9.590E-04        84.569
14           -2.9912350712E+01        5.178E-04        84.827
15           -2.9912262211E+01        3.602E-04        84.466
16           -2.9912208723E+01        1.951E-04        84.559
17           -2.9912101193E+01        1.428E-04        86.730
18           -2.9912039434E+01        1.105E-04        87.756
19           -2.9911989203E+01        8.379E-05        83.149
Total number of SCF: 19    

k = [-0.250, -0.250, 0.000]
Occupation of state 213 = 0.000000001287595.
Occupation of state 237 = 0.000000000000000.

No.1 Exx outer loop: 
1            -2.9706878266E+01        1.305E-02        138.685
2            -2.9696357109E+01        1.396E-02        133.666
3            -2.9700801757E+01        1.342E-02        133.707
4            -2.9701795133E+01        1.424E-02        133.707
5            -2.9700165566E+01        1.171E-02        133.532
6            -2.9701893972E+01        9.155E-03        133.759
7            -2.9703790376E+01        9.216E-03        135.626
8            -2.9704710689E+01        3.912E-03        133.124
9            -2.9706642432E+01        3.174E-03        133.114
10           -2.9707471811E+01        2.744E-03        133.603
11           -2.9707976878E+01        1.953E-03        133.330
12           -2.9708159426E+01        1.249E-03        133.799
13           -2.9707962053E+01        6.339E-04        133.435
14           -2.9707820309E+01        5.911E-04        133.463
15           -2.9707727827E+01        7.076E-04        133.068
16           -2.9707718332E+01        4.034E-04        133.187
17           -2.9707707573E+01        3.432E-04        133.424
18           -2.9707693490E+01        2.133E-04        133.008
19           -2.9707639156E+01        1.389E-04        133.405
20           -2.9707620028E+01        2.581E-04        134.597
21           -2.9707605247E+01        1.325E-04        133.010
22           -2.9707601170E+01        9.651E-05        132.860
23           -2.9707594560E+01        9.834E-05        132.839
24           -2.9707591882E+01        3.911E-05        133.036
25           -2.9707578695E+01        7.709E-05        133.532
26           -2.9707571266E+01        4.796E-05        132.538
27           -2.9707563445E+01        1.795E-05        132.885
28           -2.9707560220E+01        1.339E-05        132.913
29           -2.9707557321E+01        7.217E-05        132.564
30           -2.9707557374E+01        7.015E-05        132.504
31           -2.9707557597E+01        5.282E-05        132.465
32           -2.9707556946E+01        4.288E-05        132.602
33           -2.9707555539E+01        1.219E-05        134.400
34           -2.9707554471E+01        9.543E-06        135.326
35           -2.9707556439E+01        3.716E-05        132.247
36           -2.9707556700E+01        4.545E-06        132.151
37           -2.9707558034E+01        5.908E-06        133.625
38           -2.9707558814E+01        6.008E-06        132.528
39           -2.9707559593E+01        1.682E-05        132.373
40           -2.9707559034E+01        2.056E-05        132.835
41           -2.9707559887E+01        1.698E-05        132.105
42           -2.9707559609E+01        3.968E-06        132.073
43           -2.9707559576E+01        4.787E-06        132.283
44           -2.9707559644E+01        4.063E-06        133.053
45           -2.9707559820E+01        1.162E-05        131.982
46           -2.9707559812E+01        1.200E-05        132.111
47           -2.9707559838E+01        1.193E-05        134.497
48           -2.9707559813E+01        1.156E-05        132.118
49           -2.9707559704E+01        1.119E-05        131.919
50           -2.9707559813E+01        1.286E-05        132.304
51           -2.9707559525E+01        1.202E-05        132.284
52           -2.9707559749E+01        1.015E-05        132.355
53           -2.9707559814E+01        9.554E-06        132.138
54           -2.9707560114E+01        1.131E-05        131.849
55           -2.9707560191E+01        2.013E-05        132.188
56           -2.9707560023E+01        1.252E-05        132.011
57           -2.9707560110E+01        1.851E-06        131.865
58           -2.9707560026E+01        4.153E-06        132.123
59           -2.9707560059E+01        4.564E-06        132.174
60           -2.9707560081E+01        4.365E-06        133.191
61           -2.9707560116E+01        9.633E-07        134.298
Total number of SCF: 61    

k = [-0.250, -0.250, 0.000]
Occupation of state 213 = 0.000000000013970.
Occupation of state 237 = 0.000000000000000.
Exx outer loop error: 5.8934542982e-01 

No.2 Exx outer loop: 
1            -2.9707841314E+01        1.516E-03        138.207
2            -2.9707082056E+01        1.495E-03        133.562
3            -2.9707310064E+01        5.194E-03        133.437
4            -2.9707567655E+01        7.525E-03        134.277
5            -2.9707607629E+01        3.839E-03        133.178
6            -2.9707832023E+01        4.639E-03        134.551
7            -2.9707983275E+01        5.096E-03        136.149
8            -2.9708005472E+01        5.675E-03        133.233
9            -2.9707969265E+01        4.954E-03        133.304
10           -2.9708025271E+01        5.283E-03        133.963
11           -2.9707790601E+01        5.503E-03        133.865
12           -2.9707896437E+01        6.216E-03        133.405
13           -2.9707930135E+01        1.680E-03        133.187
14           -2.9707901122E+01        4.790E-04        133.471
15           -2.9707901830E+01        1.468E-03        133.119
16           -2.9707902058E+01        1.083E-03        133.141
17           -2.9707901252E+01        2.877E-04        134.393
18           -2.9707881085E+01        4.760E-04        133.291
19           -2.9707850957E+01        1.973E-04        133.264
20           -2.9707809461E+01        6.104E-05        134.461
21           -2.9707799542E+01        4.070E-05        134.762
22           -2.9707777305E+01        2.930E-05        132.724
23           -2.9707777958E+01        1.536E-05        133.389
24           -2.9707775239E+01        1.218E-05        133.398
25           -2.9707777299E+01        8.586E-06        133.224
26           -2.9707777048E+01        8.978E-06        133.168
27           -2.9707777281E+01        7.436E-06        132.772
28           -2.9707779497E+01        7.979E-06        132.996
29           -2.9707782807E+01        6.653E-06        131.820
30           -2.9707782738E+01        3.670E-06        132.361
31           -2.9707783338E+01        5.544E-06        133.022
32           -2.9707782784E+01        3.712E-06        132.354
33           -2.9707782715E+01        5.530E-06        131.719
34           -2.9707782951E+01        2.777E-06        135.906
35           -2.9707782746E+01        3.297E-06        132.585
36           -2.9707782985E+01        6.503E-07        131.475
Total number of SCF: 36    

k = [-0.250, -0.250, 0.000]
Occupation of state 213 = 0.000000000008829.
Occupation of state 237 = 0.000000000000000.
Exx outer loop error: 9.5717892557e-03 

No.3 Exx outer loop: 
1            -2.9707808644E+01        5.549E-04        137.980
2            -2.9707745861E+01        5.084E-04        133.204
3            -2.9707772326E+01        1.064E-03        132.735
4            -2.9707831536E+01        1.394E-03        132.642
5            -2.9707825494E+01        9.840E-04        134.328
6            -2.9707810955E+01        9.645E-05        132.570
7            -2.9707813103E+01        8.913E-05        132.813
8            -2.9707811943E+01        6.998E-05        133.501
9            -2.9707811303E+01        4.684E-05        133.055
10           -2.9707810833E+01        3.588E-05        133.051
11           -2.9707806780E+01        2.034E-05        132.638
12           -2.9707802225E+01        1.584E-05        132.609
13           -2.9707797079E+01        6.092E-06        135.778
14           -2.9707795077E+01        6.218E-06        134.323
15           -2.9707794608E+01        5.975E-06        134.765
16           -2.9707791972E+01        3.322E-06        134.898
17           -2.9707791441E+01        2.460E-06        134.597
18           -2.9707790559E+01        7.819E-06        142.117
19           -2.9707790663E+01        4.275E-06        138.125
20           -2.9707790368E+01        6.907E-06        136.310
21           -2.9707790529E+01        3.245E-06        134.683
22           -2.9707790324E+01        4.777E-06        134.099
23           -2.9707790287E+01        2.291E-06        134.941
24           -2.9707790248E+01        1.282E-06        134.450
25           -2.9707790014E+01        2.737E-06        134.664
26           -2.9707789968E+01        3.015E-07        134.198
Total number of SCF: 26    

k = [-0.250, -0.250, 0.000]
Occupation of state 213 = 0.000000000006765.
Occupation of state 237 = 0.000000000000000.
Exx outer loop error: 8.8315214472e-04 

No.4 Exx outer loop: 
1            -2.9707795134E+01        3.253E-04        137.946
2            -2.9707788728E+01        2.534E-04        133.043
3            -2.9707790500E+01        5.314E-04        133.510
4            -2.9707784219E+01        3.710E-04        133.213
5            -2.9707789131E+01        1.325E-04        133.364
6            -2.9707800381E+01        2.726E-05        134.240
7            -2.9707801437E+01        1.419E-05        133.608
8            -2.9707800723E+01        3.162E-05        133.407
9            -2.9707797915E+01        1.689E-05        134.408
10           -2.9707793755E+01        1.389E-05        133.545
11           -2.9707791946E+01        1.035E-05        133.179
12           -2.9707791692E+01        3.253E-06        134.252
13           -2.9707791027E+01        1.522E-06        135.333
14           -2.9707790805E+01        2.105E-06        133.126
15           -2.9707790736E+01        3.145E-06        132.481
16           -2.9707790762E+01        8.849E-07        132.550
Total number of SCF: 16    

k = [-0.250, -0.250, 0.000]
Occupation of state 213 = 0.000000000005869.
Occupation of state 237 = 0.000000000000000.
Exx outer loop error: 5.8423429414e-05 

No.5 Exx outer loop: 
1            -2.9707792746E+01        2.363E-04        138.188
2            -2.9707789433E+01        3.700E-04        132.716
3            -2.9707798956E+01        4.087E-04        134.719
4            -2.9707828779E+01        1.208E-03        132.753
5            -2.9707830068E+01        1.290E-03        132.919
6            -2.9707817761E+01        8.367E-04        134.141
7            -2.9707796759E+01        2.069E-04        133.200
8            -2.9707788010E+01        1.122E-04        133.023
9            -2.9707783549E+01        9.712E-05        132.356
10           -2.9707782710E+01        8.777E-05        132.595
11           -2.9707785043E+01        1.212E-04        132.342
12           -2.9707784897E+01        1.080E-04        132.433
13           -2.9707786219E+01        8.251E-05        133.195
14           -2.9707786804E+01        7.566E-05        132.831
15           -2.9707792338E+01        1.689E-05        132.859
16           -2.9707794525E+01        2.480E-05        133.558
17           -2.9707792757E+01        1.901E-05        134.388
18           -2.9707792759E+01        7.090E-06        132.528
19           -2.9707791388E+01        6.421E-06        132.512
20           -2.9707790705E+01        1.090E-05        133.433
21           -2.9707791504E+01        4.834E-06        132.476
22           -2.9707791194E+01        1.663E-06        132.398
23           -2.9707790922E+01        1.527E-06        132.407
24           -2.9707790824E+01        1.053E-06        132.506
25           -2.9707790784E+01        4.803E-07        132.117
Total number of SCF: 25    

k = [-0.250, -0.250, 0.000]
Occupation of state 213 = 0.000000000005405.
Occupation of state 237 = 0.000000000000000.
Exx outer loop error: 1.1294925717e-04 

No.6 Exx outer loop: 
1            -2.9707791511E+01        1.491E-04        138.312
2            -2.9707790662E+01        7.562E-05        134.010
3            -2.9707793968E+01        8.135E-05        133.324
4            -2.9707799988E+01        1.851E-05        133.004
5            -2.9707793260E+01        6.312E-05        133.538
6            -2.9707795458E+01        9.239E-06        133.337
7            -2.9707792679E+01        4.657E-06        133.047
8            -2.9707791471E+01        4.407E-06        133.976
9            -2.9707791046E+01        1.978E-06        133.562
10           -2.9707790896E+01        1.747E-06        132.918
11           -2.9707791084E+01        2.385E-06        133.084
12           -2.9707791007E+01        2.452E-06        134.439
13           -2.9707790757E+01        8.139E-07        132.040
Total number of SCF: 13    

k = [-0.250, -0.250, 0.000]
Occupation of state 213 = 0.000000000005135.
Occupation of state 237 = 0.000000000000000.
Exx outer loop error: 4.5003276281e-05 
====================================================================
                    Energy and force calculation                    
====================================================================
Free energy per atom               : -2.9707790596E+01 (Ha/atom)
Total free energy                  : -1.4556817392E+03 (Ha)
Band structure energy              : -3.7013007771E+02 (Ha)
Exchange correlation energy        : -1.7128036073E+02 (Ha)
Self and correction energy         : -1.9183810883E+03 (Ha)
Entropy*kb*T                       : -1.0947129991E-02 (Ha)
Fermi level                        : -1.6427125988E-01 (Ha)
RMS force                          :  2.0313370301E-02 (Ha/Bohr)
Maximum force                      :  1.0026187009E-01 (Ha/Bohr)
Time for force calculation         :  1.737 (sec)
***************************************************************************
                               Timing info                                 
***************************************************************************
Total walltime                     :  74072.839 sec
___________________________________________________________________________

***************************************************************************
*             Material Physics & Mechanics Group, Georgia Tech            *
*                       PI: Phanish Suryanarayana                         *
*                Main Developers: Qimen Xu, Abhiraj Sharma                *
*     Collaborators: J.E. Pask (LLNL), A.J. Medford (GT), E. Chow (GT)    *
*  Acknowledgements: U.S. DOE (DE-SC0019410); U.S. NSF (1333500,1553212)  *
***************************************************************************
                                                                           
