HSE_carbon_assisted/range_param_test/ads_slab/N2_rutile_110/N2_slab_VASP/sprc-calc.static
***************************************************************************
                            Atom positions                                 
***************************************************************************
Fractional coordinates of N:
      0.0080065346       0.4986439295       0.7732908301
      0.0030996874       0.5035634456       0.7294479489
Fractional coordinates of O:
      0.0000953229       0.0000847749       0.3174522579
      0.5001123151       0.0000842100       0.2903420077
      0.6982701056       0.2502361025       0.3692130114
      0.3019953681       0.2499870074       0.3692147170
      0.5007166986       0.9977394664       0.4526557093
      0.0018829922       0.9994798492       0.4220994957
      0.1962877668       0.2488312026       0.5038185472
      0.8052389688       0.2488037461       0.5036228735
      0.9999148645       0.9966520869       0.5838800871
      0.5009075012       0.9970030660       0.5571407652
      0.6921325816       0.2491815508       0.6434204029
      0.3080485398       0.2491064317       0.6433031467
      0.5000937217       0.0000849212       0.1869066394
      0.0001916938       0.9987778243       0.6845407264
      0.1982685044       0.2502362489       0.2386673929
      0.8019937669       0.2499871538       0.2386690985
      0.0000953229       0.5000847749       0.3174522579
      0.5001123151       0.5000842100       0.2903420077
      0.6982701056       0.7502361025       0.3692130114
      0.3019953681       0.7499870074       0.3692147170
      0.5008675852       0.4977013544       0.4524711157
      0.0014607825       0.4999647836       0.4226561391
      0.1962690004       0.7473173279       0.5038037806
      0.8052440367       0.7473610846       0.5036158398
      0.0001626858       0.4979917615       0.5953985811
      0.5009500208       0.4973594853       0.5558546242
      0.6921198162       0.7443150058       0.6436594320
      0.3080679055       0.7443698968       0.6435245479
      0.5000937217       0.5000849212       0.1869066394
      0.1982685044       0.7502362489       0.2386673929
      0.8019937669       0.7499871538       0.2386690985
Fractional coordinates of Ti:
      0.0001236034       0.4998973860       0.2385121872
      0.5001425210       0.2500381781       0.2385220143
      0.5001981673       0.4857616685       0.3647583430
      0.0002614247       0.2487091632       0.3684249709
      0.0027490657       0.4973060723       0.4973149683
      0.5038192859       0.2473717356       0.4984061367
      0.5001170111       0.4962451848       0.6271951115
      0.9998459929       0.2249063281       0.6335630486
      0.0001236034       0.9998973860       0.2385121872
      0.5001425210       0.7500381781       0.2385220143
      0.5000016449       0.9853707514       0.3647790311
      0.0001832768       0.7489489880       0.3684763228
      0.0030242029       0.9968410618       0.4965912531
      0.5038562533       0.7470968202       0.4984759136
      0.4999669514       0.9962135475       0.6288114462
      0.9997834183       0.7705889450       0.6343049569
Total free energy (Ha): -1.455681739202342E+03
Atomic forces (Ha/Bohr):
 -1.0947523905E-03   9.5676172718E-04  -3.3579467430E-02
  1.0554018833E-03  -9.2180952670E-04   3.1813419019E-02
  5.0839822294E-05  -1.3895218963E-04  -9.8225390145E-03
  1.3086630981E-05  -1.6435727841E-03   3.3665493650E-02
 -1.1818777936E-02   7.3304233177E-05   3.8849443259E-03
  1.2636600259E-02   3.7220699150E-04   3.5388216107E-03
  3.3402854029E-04  -3.2285012657E-04   7.1610324085E-03
 -7.5385622267E-04  -5.9032952658E-05   2.4266098989E-03
 -3.2168695590E-03   1.5998705103E-06  -1.7004254468E-03
  2.8673469741E-03   5.1378925738E-05  -1.5858776900E-03
  9.8891040081E-05   4.3685888866E-04   8.2999191214E-03
  1.4685127942E-04   7.6037363928E-07  -6.5709588384E-04
 -1.6542926837E-03   2.8504406642E-04  -2.9625540819E-03
  1.7474798335E-03   2.5373163680E-04  -2.9517739882E-03
  4.0354902960E-05  -7.7829154703E-05   7.0281503039E-02
 -6.7037575040E-06  -1.6669472081E-04  -1.6454178649E-02
 -4.3278017048E-02  -8.8899360440E-05  -1.3413130608E-02
  4.3235239299E-02   1.4525055365E-04  -1.3435465659E-02
  6.0562045931E-05  -1.7095590703E-04  -9.2834291103E-03
  4.3840401502E-05  -1.4795661205E-03   3.3369241798E-02
 -1.1995135278E-02   1.8808358991E-04   3.8707227415E-03
  1.2768832724E-02   3.9751319958E-04   3.5186217602E-03
  2.5983861781E-04  -1.5724131129E-04   7.2040661128E-03
 -4.3441039721E-04  -4.9606119398E-04   3.6659339472E-03
 -3.0760995583E-03  -2.0173220419E-04  -1.8321258430E-03
  2.7935412814E-03  -2.1659297552E-04  -1.7448069212E-03
  4.4405269480E-05  -3.3841399499E-04   7.7887849182E-03
  1.6893195642E-04   6.3492403776E-05  -1.3643125587E-03
 -1.4972275244E-03  -2.9299585250E-06  -2.8674424560E-03
  1.5789351563E-03   3.6905171956E-05  -2.8042285315E-03
  4.0441098255E-05  -8.8250871142E-05   7.0281998273E-02
 -4.3279942107E-02  -4.4582581480E-05  -1.3410715487E-02
  4.3235098409E-02   1.6643762569E-04  -1.3430191262E-02
  3.2358668573E-05  -8.2039485904E-05   5.7679995677E-02
 -5.4290636398E-05  -1.0708547190E-04  -1.0021150645E-01
 -1.7047373895E-04   1.2039518354E-04  -1.2217700805E-02
  1.0115264728E-04   9.0219531268E-04  -4.7480031196E-03
 -1.7406748953E-04  -1.2976350177E-04  -5.7720909391E-03
 -4.5288084089E-04   8.1922397964E-04  -9.8883726188E-06
 -8.9216414041E-06   6.8389916941E-04  -6.8628819298E-03
  6.1876231496E-05  -6.9587190074E-03  -2.9016046428E-03
  3.7141246395E-05  -8.0631135480E-05   5.7465190769E-02
 -5.7228583461E-05  -1.2305148167E-04  -1.0026177824E-01
 -1.5414582497E-04   1.7160288779E-03  -1.2921038884E-02
  1.4164065973E-04  -5.5818009066E-04  -4.8465406474E-03
 -1.0071287126E-04   7.5633602841E-04  -3.3559371118E-03
 -4.8881867144E-04  -3.4108895983E-04  -1.3305095199E-04
  7.7609162615E-05   3.1972295139E-04  -5.4688451483E-03
  9.5298719209E-05   6.2493963078E-03  -2.9056712006E-03
